bad/assign_array_casted_null_array.example_compiler_output
ERROR
[1mbad/assign_array_casted_null_array.lat:4:14: [1;31merror: [0;1mleft side is not assignable[m
	(int[])null = new int[3];
	            [1;32m^[m
[1mbad/assign_array_casted_null_array.lat:4:2: [1;34mnote: [0;1mleft side starts here[m
	(int[])null = new int[3];
	[1;32m^[m
